...
    -->
    <string name="all">All</string>
    <string name="logging_in">Logging in</string>
    <string name="loading_stores">Loading stores</string>
    <string name="signout">Log out</string>
    <string name="my_store">My store</string>
    <string name="orders">Orders</string>
    <string name="email_address">Email address</string>
    <string name="currency_total">%1$s%2$s</string>
    <string name="currency_total_negative">-%1$s%2$s</string>
    <string name="order_total">Order total</string>
    <string name="shipping">Shipping</string>
    <string name="payment">Payment</string>
...
    <string name="subtotal">Subtotal</string>
    <string name="products_total">Products total</string>
    <string name="discount">Discount</string>
    <string name="details">Details</string>
    <string name="hide_details">Hide Details</string>
    <string name="retry">Retry</string>
    <string name="undo">Undo</string>
    <string name="install">Install</string>
    <string name="update_downloaded">Woo has downloaded an update</string>
    <string name="update_failed">Woo update has failed</string>
    <string name="continue_button">Continue</string>
    <string name="refresh_button">Refresh</string>
    <string name="untitled">Untitled</string>
    <string name="cancel">Cancel</string>
    <string name="keep_editing">Keep editing</string>
    <string name="learn_more">Learn More</string>
    <string name="try_it_now">Try it now</string>
    <string name="offline_message">Offline \u2014 using cached data</string>
    <string name="offline_error">Your network is unavailable. Check your data or wifi connection.</string>
    <string name="product">Product</string>
    <string name="today">Today</string>
    <string name="this_week">This Week</string>
    <string name="this_month">This Month</string>
    <string name="this_year">This Year</string>
    <string name="discard">Discard</string>
...
    <string name="orderdetail_payment_cleared">Payment Cleared</string>
    <string name="orderdetail_show_billing">Show Billing</string>
    <string name="orderdetail_hide_billing">Hide Billing</string>
    <string name="orderdetail_add_note">Add a note</string>
    <string name="orderdetail_addnote_contentdesc">Add an order note</string>
    <string name="orderdetail_change_order_status">Click to change order status</string>
    <string name="orderdetail_track_shipment">Track shipment</string>
    <string name="orderdetail_copy_tracking_number">Copy tracking number</string>
    <string name="orderdetail_delete_tracking">Delete tracking</string>
    <string name="orderdetail_empty_shipping_address">No address specified.</string>
    <string name="orderdetail_shipping_notice">This order is using extensions to calculate shipping. The shipping methods shown might be incomplete.</string>
    <string name="orderdetail_issue_refund_button">Issue refund</string>
    <string name="order_begin_fulfillment">Begin fulfillment</string>
    <string name="order_fulfill_mark_complete">Mark Order Complete</string>
    <string name="order_fulfill_marked_complete">Order Marked Complete</string>
...
    <string name="order_shipment_tracking_number">Tracking Number</string>
    <string name="order_shipment_tracking_number_clipboard">Tracking number copied to the clipboard</string>
    <string name="order_shipment_tracking_button">Track package</string>
    <string name="order_detail_shipment_tracking_button_contentdesc">Track or delete shipment tracking</string>
    <string name="order_shipment_tracking_section_cd">Shipment tracking</string>
    <string name="order_shipment_tracking_copy_to_clipboard">Copy tracking number to clipboard</string>
    <string name="order_shipment_tracking_shipped_date">Shipped %s</string>
    <string name="order_shipment_tracking_add_label">Optional tracking information</string>
    <string name="order_shipment_tracking_add_button">Add tracking</string>
    <string name="order_shipment_tracking_delete_snackbar_msg">Deleted shipment tracking</string>
    <string name="order_shipment_tracking_delete_error">Error deleting tracking</string>
    <string name="order_shipment_tracking_delete_success">Tracking deleted</string>
    <!--
        Refunds
    -->
    <string name="order_refunds_available_for_refund">%s available for refund</string>
    <string name="order_refunds_title_with_amount">Refund %s</string>
    <string name="order_refunds_confirmation">Are you sure you want to issue a refund? This can’t be undone.</string>
...
