...
                    style="@style/Woo.Card.Expandable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <!-- Shipment Tracking -->
                <co.innoshop.android.ui.orders.OrderDetailShipmentTrackingListView
                    android:id="@+id/orderDetail_shipmentList"
                    style="@style/Woo.Card.WithoutPadding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:contentDescription="@string/order_shipment_tracking_section_cd"
                    android:visibility="gone"
...
